# CKS-Slavia

./: package.json  pnpm-lock.yaml
app/: layout.tsx  not-found.tsx
app/components/: Footer.tsx  NavBar.tsx
app/dashboard/admin/: page.tsx
app/plans/: page.tsx
backend/: Cargo.toml
backend/src/: main.rs
